Adding heading css

--- a/src/Components/Right Component/rightcard.css
+++ b/src/Components/Right Component/rightcard.css
@@ -20,3 +20,11 @@ button{
 h1{
     margin:18px 0px;
 }
+
+.Heading{
+    font-size: 250px;
+    margin-top: -400px;
+    margin-bottom: 200px;
+    z-index: 1;
+    opacity: 100%;
+}
